# chatsec

./: .gitignore  Dockerfile  README.md  compose.yaml  mix.exs
assets/: package-lock.json  package.json  tailwind.config.js
assets/js/: app.js  chat.js  donate.js  encrypt.js  handshake.js  link.js  message.js  toast.js  user_socket copy.js  user_socket.js  username.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
e2e/: pyproject.toml
e2e/tests/: test_chat_buttons.py  test_encrypted_messages.py  test_error_pages.py  test_home.py
lib/: chatsec.ex  chatsec_web.ex
lib/chatsec/: application.ex  mailer.ex  message.ex  repo.ex
lib/chatsec_web/: channel_state.ex  endpoint.ex  gettext.ex  router.ex  scheduler.ex  telemetry.ex
lib/chatsec_web/channels/: presence.ex  room_channel.ex  user_socket.ex
lib/chatsec_web/components/: core_components.ex  layouts.ex
lib/chatsec_web/components/layouts/: app.html.heex  root.html.heex
lib/chatsec_web/controllers/: chat_controller.ex  chat_html.ex  error_html.ex  error_json.ex  page_controller.ex  page_html.ex
lib/chatsec_web/controllers/chat_html/: index.html.heex
lib/chatsec_web/controllers/error_html/: 404.html.heex  500.html.heex
priv/cert/: selfsigned.pem  selfsigned_key.pem
priv/repo/: seeds.exs
priv/repo/migrations/: 20240516080712_create_messages.exs
test/: test_helper.exs
test/chatsec_web/: channel_state_test.exs
test/chatsec_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
test/support/: conn_case.ex  data_case.ex
(+3 files in other folders)
